# POCBackend

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Base.h  Class.h  Code.h  Course.h  Login.h  Manager.h  Quiz.h  User.h
res/conf/: config.json
res/script/: compile.py
src/: Class.cpp  Code.cc  Code.cpp  Course.cpp  Login.cpp  Manager.cpp  Quiz.cpp  User.cpp
